ci/deploy/templates/deploy-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pl-frontend
spec:
  strategy:
    type: RollingUpdate # Стратегия обновления RollingUpdate
    rollingUpdate:
      maxSurge: 1 # Количество pod-ов, превосходящее число, указанное в поле replicas в момент обновления
      maxUnavailable: 0 # Количество pod-ов, которые могут быть недоступны в момент обновления
  replicas: 2
  selector:
    matchLabels:
      app: pl-frontend
  template:
    metadata:
      labels:
        app: pl-frontend
    spec:
        imagePullSecrets:
          - name: docker-hub
        containers:
          - name: pl-frontend-image # Имя контейнера внутри pod-а
            image: registry.xrm.ru/planner/ng-docker-ui:latest # Образ контейнера
            imagePullPolicy: "Always"
            livenessProbe:
                  httpGet:
                    path: /index.html
                    port: 80
                  initialDelaySeconds: 2
                  failureThreshold: 3
                  periodSeconds: 5
